# manageritm

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: docker-build.yaml  release.yml
examples/docker_proxied_browser/: .pdbrc  .pdbrc.py  Makefile
examples/docker_proxied_browser/.mitmproxy/: config.yaml
examples/docker_proxied_browser/docker/: compose.yaml
examples/docker_proxied_browser/docker/manageritm/: Dockerfile  entry_point.sh
examples/docker_proxied_browser/docker/tre/: Dockerfile
examples/docker_proxied_browser/scripts/: launch_proxied_browser.py
instance/: flask_config_production.py  flask_config_testing.py
manageritm/: __init__.py
manageritm/client/: __init__.py  manageritm_client.py  manageritm_command_client.py  manageritm_proxy_client.py
manageritm/server/: process_minder.py  routes.py
tests/: conftest.py
tests/client/: test_client.py
tests/server/: test_process_minder.py  test_routes.py
